added func of refilter
